--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -11,11 +7,47 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./build.css" rel="stylesheet">
-    </head>
-    <body>
-      <h1 class="text-3xl font-bold underline bg-red-800">
-        Hello world!
+      </head>
+ <body class="bg-white">
+   <header class="w-full pt-[104px]">
+     <div class="w-[78%] mx-auto flex items-center justify-between">
+       <div class="flex items-center gap-[50px]">
+         <span class="text-[#25A4AD] text-[22px] leading-normal capitalize"> Payme </span>
+         <ul class="flex items-center gap-[50px]"]>
+           <li class="text-[#313131] text-lg leading-normal capitalize">
+           Home
+           </li>
+           <li class="text-[#313131] text-lg leading-normal capitalize">
+           About
+           </li>
+           <li class="text-[#313131] text-lg leading-normal capitalize">
+           Testimonial
+           </li>
+           <li class="text-[#313131] text-lg leading-normal capitalize">
+           Contact
+           </li>
+          </ul>
+       </div>
+       <div class="flex items-center gap-7">
+        <span class="text-[#313131] text-lg leading-normal">
+          Sign in
+        </span>
+        <button class="border shadow-cta border-[#25A4AD] w-[152px] h-[58px] text-center text-[#25A4AD] text-lg leading-normal">
+          Sign Up
+        </button>
+      </div>
+    </div>
+    <div class="w-[130.066px] h-[130.066px] border vorder-solid border-[#25A4AD] absolute top-0 -left-[110px] bg-transparent -rotate-[19.523deg]" >
+    </div>
+    <img src="assets/right-top-shape.png" class="absolute top-0 right-0" />
+    <img src="assets/orange-shape.png" class="absolute bottom-[-10px] left-[38%] overflow-auto" />
+    </header>
+    <main class="min-h-screen">
+     
+      <h1 class="text-base font-light underline">
+        hello world!
       </h1>
-    </body>
-    </html>
+      
+    </main>
+  </body>
 </html>
